[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://ethereal_tunnel.gd" type="Script" id=2]
[ext_resource path="res://spatial_linguistic_connector.gd" type="Script" id=3]
[ext_resource path="res://auto_agent_mode.gd" type="Script" id=4]
[ext_resource path="res://universal_data_flow.gd" type="Script" id=5]
[ext_resource path="res://project_connector_system.gd" type="Script" id=6]

[node name="Layer0" type="Node"]
script = ExtResource( 1 )

[node name="EtherealTunnel" type="Node" parent="."]
script = ExtResource( 2 )

[node name="SpatialLinguistic" type="Node" parent="."]
script = ExtResource( 3 )

[node name="AutoAgent" type="Node" parent="."]
script = ExtResource( 4 )

[node name="UniversalDataFlow" type="Node" parent="."]
script = ExtResource( 5 )

[node name="ProjectConnector" type="Node" parent="."]
script = ExtResource( 6 )

[node name="WordProcessor" type="Node" parent="."]

[node name="ColorSystem" type="Node" parent="."]

[node name="ShapeSystem" type="Node" parent="."]

[node name="OCRSystem" type="Node" parent="."]

[node name="3DVisualization" type="Spatial" parent="."]

[node name="TrajectoryVisualizer" type="Spatial" parent="3DVisualization"]

[node name="WordManifestations" type="Spatial" parent="3DVisualization"]

[node name="DimensionalTunnels" type="Spatial" parent="3DVisualization"]

[node name="ColorChannels" type="Spatial" parent="3DVisualization"]

[node name="DataFlows" type="Spatial" parent="3DVisualization"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusPanel" type="Panel" parent="UI"]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.25
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="UI/StatusPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "System Status"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandPanel" type="Panel" parent="UI"]
anchor_left = 0.01
anchor_top = 0.8
anchor_right = 0.99
anchor_bottom = 0.99
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandInput" type="LineEdit" parent="UI/CommandPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
placeholder_text = "Enter command..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnIndicator" type="Panel" parent="UI"]
anchor_left = 0.75
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="UI/TurnIndicator"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Turn: 0/12"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DimensionIndicator" type="Panel" parent="UI"]
anchor_left = 0.75
anchor_top = 0.11
anchor_right = 0.99
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DimensionLabel" type="Label" parent="UI/DimensionIndicator"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Dimension: 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordTrajectories" type="Panel" parent="UI"]
anchor_left = 0.26
anchor_top = 0.01
anchor_right = 0.5
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordTrajectoriesLabel" type="Label" parent="UI/WordTrajectories"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "Word Trajectories: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataFlowPanel" type="Panel" parent="UI"]
anchor_left = 0.51
anchor_top = 0.01
anchor_right = 0.74
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataFlowLabel" type="Label" parent="UI/DataFlowPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "Data Flows: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="turn_advanced" from="." to="." method="_on_turn_advanced"]
[connection signal="dimension_shifted" from="." to="." method="_on_dimension_shifted"]
[connection signal="word_manifested" from="." to="." method="_on_word_manifested"]
[connection signal="trajectory_created" from="." to="." method="_on_trajectory_created"]
[connection signal="data_flow_established" from="." to="." method="_on_data_flow_established"]
[connection signal="file_modified" from="." to="." method="_on_file_modified"]
[connection signal="text_entered" from="UI/CommandPanel/CommandInput" to="." method="_on_CommandInput_text_entered"]